# habits

./: .actrc  .env.example  .gitignore  .gitmodules  .mcp.json  .nxignore  COMMANDS.md  COMMANDS.old.md  DOWNLOADS.md  LICENSE.md  README.md  all_node_modules  build-release-act.sh  config.json.example  config.test.json  download-package.sh  exec  home.md  modules-with-extra.json  modules.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  recipe-plan.md  test-tailwind-inliner.ts  tsconfig.base.json  tsconfig.json  used_node_modules.yaml
habits-cortex/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.debug.conf.json  tauri.dev.conf.json  test-read-lancedb.js
habits-cortex/src-tauri/.cargo/: config.toml
habits-cortex/src-tauri/capabilities/: default.json  desktop.json  mobile.json
habits-cortex/src-tauri/icons/: icon.icns
habits-cortex/src-tauri/src/: automation.rs  lib.rs  main.rs
habits-cortex/tauri-plugin-candle/: Cargo.toml  build.rs
habits-cortex/tauri-plugin-candle/permissions/autogenerated/: reference.md
habits-cortex/tauri-plugin-candle/permissions/autogenerated/commands/: ensure_models_dir.toml  vision_chat.toml
habits-cortex/tauri-plugin-candle/permissions/schemas/: schema.json
habits-cortex/tauri-plugin-candle/src/: candle_manager.rs  commands.rs  error.rs  lib.rs  models.rs  text_generation.rs
habits-cortex/tauri-plugin-diffusion/: Cargo.toml  build.rs
habits-cortex/tauri-plugin-diffusion/src/: commands.rs  diffusion_manager.rs  error.rs  lib.rs  models.rs
habits-cortex/tauri-plugin-email/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
habits-cortex/tauri-plugin-email/guest-js/: index.ts
habits-cortex/tauri-plugin-email/permissions/: all.toml
habits-cortex/tauri-plugin-email/permissions/autogenerated/: reference.md
habits-cortex/tauri-plugin-email/permissions/autogenerated/commands/: connect_imap.toml  disconnect_imap.toml  fetch_email_by_uid.toml  fetch_emails.toml  list_mailboxes.toml  search_emails.toml  select_mailbox.toml  send_email.toml
habits-cortex/tauri-plugin-email/permissions/schemas/: schema.json
habits-cortex/tauri-plugin-email/src/: commands.rs  error.rs  imap_client.rs  lib.rs  models.rs  smtp.rs
habits-cortex/tauri-plugin-keyring/: Cargo.toml  README.md  build.rs
habits-cortex/tauri-plugin-keyring/src/: keyring_impl.rs  lib.rs
habits-cortex/tauri-plugin-llama/: Cargo.toml  build.rs
habits-cortex/tauri-plugin-llama/permissions/autogenerated/: reference.md
habits-cortex/tauri-plugin-llama/permissions/schemas/: schema.json
habits-cortex/tauri-plugin-llama/src/: commands.rs  error.rs  lib.rs  llama_manager.rs  models.rs
habits-cortex/tauri-plugin-matter/: Cargo.toml  README.md  build.rs  package.json
habits-cortex/tauri-plugin-matter/android/: build.gradle.kts
habits-cortex/tauri-plugin-matter/android/src/main/: AndroidManifest.xml
habits-cortex/tauri-plugin-matter/guest-js/: index.ts
habits-cortex/tauri-plugin-matter/ios/: Package.swift
habits-cortex/tauri-plugin-matter/ios/Sources/: MatterPlugin.swift
habits-cortex/tauri-plugin-matter/permissions/: default.toml
habits-cortex/tauri-plugin-matter/permissions/autogenerated/: reference.md
habits-cortex/tauri-plugin-matter/permissions/autogenerated/commands/: commission_device.toml  discover_devices.toml  get_device_state.toml  remove_device.toml  set_level.toml  set_on_off.toml
habits-cortex/tauri-plugin-matter/permissions/schemas/: schema.json
habits-cortex/tauri-plugin-matter/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
habits-cortex/tauri-plugin-system-settings/: Cargo.toml  README.md  build.rs  package.json
habits-cortex/tauri-plugin-system-settings/android/: build.gradle.kts
habits-cortex/tauri-plugin-system-settings/android/src/main/: AndroidManifest.xml
habits-cortex/tauri-plugin-system-settings/guest-js/: index.ts
habits-cortex/tauri-plugin-system-settings/ios/: Package.swift
habits-cortex/tauri-plugin-system-settings/ios/Sources/: SystemSettingsPlugin.swift
habits-cortex/tauri-plugin-system-settings/permissions/: default.toml
habits-cortex/tauri-plugin-system-settings/permissions/autogenerated/: reference.md
habits-cortex/tauri-plugin-system-settings/permissions/autogenerated/commands/: get_bluetooth_state.toml  get_dnd_state.toml  get_ringer_mode.toml  set_bluetooth.toml  set_dnd.toml  set_mute.toml  set_ringer_mode.toml
habits-cortex/tauri-plugin-system-settings/permissions/schemas/: schema.json
habits-cortex/tauri-plugin-system-settings/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
local-ai-rust/: Cargo.toml  test_all.sh
local-ai-rust/local-ai-core/: Cargo.toml
local-ai-rust/local-ai-core/src/: audio.rs  device.rs  error.rs  image_caption.rs  image_gen.rs  lib.rs  text_gen.rs  text_to_voice.rs  transcribe.rs
local-ai-rust/local-ai-node/: Cargo.toml  package.json
local-ai-rust/local-ai-node/scripts/: build.js
local-ai-rust/local-ai-node/src/: lib.rs
local-ai-rust/tauri-plugin-local-ai/: Cargo.toml  README.md  build.rs
local-ai-rust/tauri-plugin-local-ai/guest-js/: package.json
local-ai-rust/tauri-plugin-local-ai/guest-js/src/: index.ts
local-ai-rust/tauri-plugin-local-ai/permissions/: default.toml
local-ai-rust/tauri-plugin-local-ai/permissions/autogenerated/: reference.md
local-ai-rust/tauri-plugin-local-ai/permissions/autogenerated/commands/: caption_image.toml  create_image_captioner.toml  create_transcriber.toml  create_voice_synthesizer.toml  (+4 more)
local-ai-rust/tauri-plugin-local-ai/src/: commands.rs  error.rs  lib.rs  state.rs
tauri-plugin-sqlite-vec/: Cargo.toml  build.rs
tauri-plugin-sqlite-vec/permissions/: default.toml
tauri-plugin-sqlite-vec/permissions/autogenerated/: reference.md
tauri-plugin-sqlite-vec/permissions/autogenerated/commands/: ensure_tables.toml  vector_delete.toml  vector_insert.toml  vector_search.toml
tauri-plugin-sqlite-vec/permissions/schemas/: schema.json
tauri-plugin-sqlite-vec/src/: commands.rs  error.rs  lib.rs  state.rs
(+1546 files in other folders)
