# Note: local-ai-core, local-ai-node, and tauri-plugin-local-ai are separate crates
# that use candle from crates.io instead of path dependencies.
# Build them separately with: cargo build -p local-ai-core (etc.)

[package]
name = "local-ai-rust"
version = "0.1.0"
edition = "2021"
description = "Cross-platform AI demo with text generation, image captioning, and image generation using Candle"
license = "MIT OR Apache-2.0"

[dependencies]
# Candle core dependencies (from crates.io)
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"

# Tokenization
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }

# Image processing
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }

# CLI
clap = { version = "4.2.4", features = ["derive"] }

# Error handling
anyhow = { version = "1", features = ["backtrace"] }

# Audio processing (for Whisper and MetaVoice)
symphonia = { version = "0.5.4", features = ["all"] }
byteorder = "1.5"

# Random number generation (for MetaVoice)
rand = "0.9"

# Serialization (for model configs)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hugging Face model hub
hf-hub = { version = "0.4.1", features = ["tokio"] }

[features]
default = []

# macOS Metal acceleration
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

# macOS Accelerate framework (CPU optimization)
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

# Linux/Windows CUDA acceleration
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]

# Intel MKL (CPU optimization for Intel processors)
mkl = [
    "candle-core/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]

[[bin]]
name = "local-ai"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
