[package]
name = "habits-cortex"
version = "1.0.0"
description = "Cortex - Run habit workflows locally"
authors = ["Habits"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "cortex_app_lib"
# staticlib required for iOS, cdylib for Android, rlib for macOS
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "habits-cortex"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
openssl = { version = "0.10", features = ["vendored"] }
tauri-plugin-keyring = { path = "../tauri-plugin-keyring" }
tauri-plugin-email = { path = "../tauri-plugin-email" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-sqlite-vec = { path = "../../tauri-plugin-sqlite-vec" }
tauri-plugin-fs = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-webdriver = { version = "0.2", optional = true }
base64 = "0.22"
tauri-plugin-deep-link = "2"

# Mobile-only dependencies (iOS/Android)
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
# Commented out for initial release - permissions require Google Play declaration form
# tauri-plugin-geolocation = "2"  # Requires location permission declaration
# tauri-plugin-wifi = { path = "../tauri-plugin-wifi" }  # Requires location permission (Android uses location for WiFi scanning)
# tauri-plugin-system-settings = { path = "../tauri-plugin-system-settings" }  # Has Bluetooth control
# tauri-plugin-matter = { path = "../tauri-plugin-matter" }  # Requires Bluetooth + Location for device commissioning
# tauri-plugin-sms = { path = "../tauri-plugin-sms" }  # Requires SMS permission declaration

# Apple targets: local-ai with Metal + Accelerate (Apple frameworks)
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
tauri-plugin-local-ai = { path = "../../local-ai-candle/tauri-plugin-local-ai", features = ["metal", "accelerate"] }

# Linux/Windows: loceal-ai with CPU-only inference (no Metal/Accelerate)
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-local-ai = { path = "../../local-ai-candle/tauri-plugin-local-ai" }

# Android: local-ai with CPU-only inference (no Metal/Accelerate)
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-local-ai = { path = "../../local-ai-candle/tauri-plugin-local-ai" }

# Desktop-only dependencies
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
xcap = { version = "0.9", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
debug-tools = ["dep:tauri-plugin-webdriver", "dep:xcap"]
# When enabled: hides "Add from Device", redirects "Browse Showcase" to local built-in habits.
# Must be set for iOS App Store and macOS App Store (Mac App Store) builds.
no-external-habits = []

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
incremental = false
