[package]
name = "tauri-plugin-candle"
version = "0.1.0"
description = "A Tauri plugin for local AI using Candle and llama.cpp - unified text, vision, and image generation"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-candle"

[dependencies]
tauri = { version = "2.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# llama.cpp bindings for GGUF model support
llama-cpp-2 = "0.1"

# HuggingFace Candle for SD inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# For file operations and downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
futures = "0.3"

# For app data directory
dirs = "5"

# For string decoding
encoding_rs = "0.8"

# For base64 image handling
base64 = "0.22"

# Image processing
image = "0.25"

# Random number generation
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
# Metal acceleration on macOS
candle-core = { version = "0.8", features = ["metal"] }

[target.'cfg(all(target_os = "linux", feature = "cuda"))'.dependencies]
# CUDA acceleration on Linux
candle-core = { version = "0.8", features = ["cuda"] }

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }

[features]
default = []
cuda = []
