[package]
name = "tauri-plugin-keyring"
version = "0.1.0"
authors = [ "Huakun Shen" ]
description = "A tauri plugin wrapper for the keyring crate"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-keyring"

[dependencies]
tauri = { version = "2.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
keyring-core = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["keychain"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5"

[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies]
dbus-secret-service-keyring-store = { version = "0.3", features = ["crypto-rust"] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.6"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
