[package]
name = "tauri-plugin-llama"
version = "0.1.0"
description = "A Tauri plugin for local LLM inference using llama.cpp"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-llama"

[dependencies]
tauri = { version = "2.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# llama.cpp bindings
llama-cpp-2 = "0.1"

# For file operations and downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
futures = "0.3"

# For app data directory
dirs = "5"

# For string decoding
encoding_rs = "0.8"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
