[package]
name = "tauri-plugin-system-settings"
version = "0.1.0"
description = "A Tauri plugin for controlling system settings on mobile devices"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-system-settings"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
    "aarch64-apple-ios",
    "x86_64-apple-ios"
]

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }

[dependencies]
tauri = { version = "2.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = []
