[package]
name = "local-ai-node"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for Local AI inference using NAPI-RS"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core library
local-ai-core = { path = "../local-ai-core" }

# NAPI-RS
napi = { version = "2", features = ["async", "serde-json", "napi9"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[features]
default = []

# macOS Metal acceleration
metal = ["local-ai-core/metal"]

# macOS Accelerate framework (CPU optimization)
accelerate = ["local-ai-core/accelerate"]

# Linux/Windows CUDA acceleration
cuda = ["local-ai-core/cuda"]

# Intel MKL (CPU optimization for Intel processors)
mkl = ["local-ai-core/mkl"]

[profile.release]
lto = true
opt-level = 3
